# medallion-data-pipeline

./: README.md
Archive 25/: .gitignore  Dockerfile.lambda  Dockerfile.lambda.multistage  README.md  app.yml  check_db_local.py  create_tables.py  host.json  init_db_history.py  lambda_handler.py  main.py  pyproject.toml  requirements-lambda.txt  requirements.txt
Archive 25/agents/: configuration.py
Archive 25/api/: api_fabric.py  api_source.py  auth.py  config_workflow.py  configuration.py  connect.py  discovery.py  dq.py  ingest.py  orchestrate.py  pipeline.py  s3_injest.py  storage.py  upload.py
Archive 25/core/: AG-DE-agent-solution-rathna.code-workspace  adls_connector.py  azure_storage.py  config_loader.py  credential_registry.py  database.py  exceptions.py  ingestion_service.py  job_store.py  logger.py  master_config_manager.py  mcp_connector.py  mcp_server.py  notifications.py  pipeline_service.py  settings.py  utils.py  validation.py
Archive 25/frontend/: README.md  package-lock.json  package.json
Archive 25/handlers/: blob_trigger.py  s3_trigger.py
Archive 25/models/: api_source_config.py  config.py  dq_schema_config.py  job.py  master_config.py  master_config_authoritative.py  metadata.py
Archive 25/orchestration/: flow.py
Archive 25/services/: fabric_bundle_analysis_service.py  fabric_runtime_intelligence_service.py  fabric_service.py  ingestion_service.py  pipeline_intelligence_service.py
Archive 25/tools/: build_and_push_ecr.sh  build_lambda_layer.sh  build_lambda_zip.sh  config_exporter.py  deploy_lambda.py  prepare_lambda_requirements.sh
(+43 files in other folders)
